Update build scripts to include Windows .bat and packaging to native executable